<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".get_help.GetHelpActivity">

    <EditText
        android:id="@+id/help_message_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:background="@drawable/edit_text_background"
        android:hint="@string/help_question_label"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="6"
        android:padding="10dp"
        android:scrollbars="vertical"

        />

    <EditText
        android:id="@+id/help_your_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/label_enter_email"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:onClick="sendEmail"
        android:text="@string/label_send" />

</LinearLayout>