<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventsAndNotificationManagerActivities.NewNotification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:padding="15dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/new_notification_inside_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_enter_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <EditText
                android:id="@+id/new_notification_title"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/label_notification_description"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_notification_inside_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <EditText
                android:id="@+id/new_notification_description"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:hint="@string/label_edit_text_description"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="6"
                android:scrollbars="vertical" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/new_notification_inside_layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/label_attachments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_an_image_hint"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <LinearLayout
                android:id="@+id/attachment_buttons_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_attach_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="attachNewImage"
                    android:src="@drawable/ic_action_attach_image" />
            </LinearLayout>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp">

            <Button
                android:id="@+id/btn_send_notification"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/label_send"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:onClick="sendNotification"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/scroll_bar_sending_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:visibility="invisible"
                android:layout_centerInParent="true"/>
        </RelativeLayout>




    </LinearLayout>


</ScrollView>
